# lab-2-Own_cmd

./: .gitignore  .pre-commit-config.yaml  README.md  mypy.ini  pyproject.toml
src/: .history  main.py
src/ls_sub_functions/: ls_dependence.py
src/sub_dependences/: archive_dependences.py  ls_dependences.py  undo_dependences.py
src/sub_functions/: archive_dependences.py  cat_dependences.py  cd_dependences.py  clear_dependences.py  cp_dependences.py  grep_dependences.py  help_func.py  history_dependences.py  logging_func.py  ls_dependences.py  mv_dependences.py  rm_dependences.py  unarchive_dependences.py  undo_dependences.py
src/sub_functions/.trash/: 20251026_144631_163122_main.py
tests/: config_tests.py  test_archives.py  test_file_operations.py  test_navigation.py  test_search.py
